[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Textures/Background the Painting.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/DAGGERSQUARE.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/menuButtons.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[node name="carSelectScreen" type="Control"]
margin_right = 45.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleBackground" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonsNode" type="Node2D" parent="."]
position = Vector2( 0, 550 )

[node name="backButton" type="Button" parent="buttonsNode"]
margin_left = 540.0
margin_top = 100.0
margin_right = 740.0
margin_bottom = 184.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car1Button" type="Button" parent="."]
margin_left = 20.0
margin_top = 50.0
margin_right = 420.0
margin_bottom = 450.0
custom_styles/hover = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "car1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car2Button" type="Button" parent="."]
margin_left = 440.0
margin_top = 50.0
margin_right = 840.0
margin_bottom = 450.0
custom_styles/hover = SubResource( 5 )
text = "car2"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car3Button" type="Button" parent="."]
margin_left = 860.0
margin_top = 50.0
margin_right = 1260.0
margin_bottom = 450.0
custom_styles/hover = SubResource( 6 )
text = "car3"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="buttonsNode/backButton" to="buttonsNode/backButton" method="_on_gotoLevelSelect_pressed"]
[connection signal="pressed" from="car1Button" to="car1Button" method="_on_car1Button_pressed"]
[connection signal="pressed" from="car2Button" to="car2Button" method="_on_car2Button_pressed"]
[connection signal="pressed" from="car3Button" to="buttonsNode/backButton" method="_on_car3Button_pressed"]
