[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Textures/Background the Painting.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/DAGGERSQUARE.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/menuButtons.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[node name="carSelectScreen" type="Control"]
margin_right = 45.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleBackground" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonsNode" type="Node2D" parent="."]
position = Vector2( 0, 550 )

[node name="menuButton" type="Button" parent="buttonsNode"]
margin_left = 330.0
margin_right = 950.0
margin_bottom = 100.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back to main menu"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" type="Button" parent="buttonsNode"]
margin_left = 470.0
margin_top = 100.0
margin_right = 810.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( -556.287, -278.72 )
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Ragequit"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameover" type="Label" parent="."]
margin_left = 447.171
margin_top = 80.0903
margin_right = 839.171
margin_bottom = 158.09
rect_rotation = 20.6486
custom_fonts/font = SubResource( 5 )
text = "yu fkd up XD"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="buttonsNode/menuButton" to="buttonsNode/menuButton" method="_on_gotoMenu_pressed"]
[connection signal="pressed" from="buttonsNode/quitButton" to="buttonsNode/quitButton" method="_on_quitButton_pressed"]
