[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Textures/Icons/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://Script/menuButtons.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/DAGGERSQUARE.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/horizontalSliders.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0.0980392, 0.376471, 0.396078, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 2
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 2
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 63
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 32
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=17]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=18]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=14]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=15]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 32
outline_color = Color( 0.639216, 1, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=20]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=21]
size = 64
font_data = ExtResource( 3 )

[node name="settingsScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 800.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="Button" parent="."]
margin_left = 330.0
margin_top = 650.0
margin_right = 950.0
margin_bottom = 734.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.631373, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back to main menu"
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volumeBar" type="HScrollBar" parent="."]
margin_left = 520.0
margin_top = 150.0
margin_right = 760.0
margin_bottom = 190.0
value = 100.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soundFX" type="Label" parent="volumeBar"]
margin_left = -60.0
margin_top = -80.0
margin_right = 173.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volumeLevel" type="Label" parent="volumeBar"]
margin_left = 190.0
margin_top = -80.0
margin_right = 333.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="songLabel" type="Label" parent="."]
margin_left = 455.0
margin_top = 250.0
margin_right = 837.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="racingButton" type="Button" parent="songLabel"]
margin_left = -435.0
margin_top = 100.0
margin_right = -35.0
margin_bottom = 220.0
custom_styles/hover = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Racing"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsRacing" type="Label" parent="songLabel/racingButton"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "by MOKKA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="megalovaniaButton" type="Button" parent="songLabel"]
margin_left = -435.0
margin_top = 240.0
margin_right = -35.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "Megalovania"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsMegalovania" type="Label" parent="songLabel/megalovaniaButton"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "by Toby Fox"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fanfareButton" type="Button" parent="songLabel"]
margin_left = -15.0
margin_top = 100.0
margin_right = 385.0
margin_bottom = 220.0
custom_styles/hover = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Fanfare"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsFanfare" type="Label" parent="songLabel/fanfareButton"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Old School Runescape"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fluffButton" type="Button" parent="songLabel"]
margin_left = -15.0
margin_top = 240.0
margin_right = 385.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
text = "Fluff a Duck"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsFluff" type="Label" parent="songLabel/fluffButton"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "by Kevin MacLeod"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seaShantyButton" type="Button" parent="songLabel"]
margin_left = 405.0
margin_top = 100.0
margin_right = 805.0
margin_bottom = 220.0
custom_styles/hover = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "Sea Shanty"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsShanty" type="Label" parent="songLabel/seaShantyButton"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Old School Runescape"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marioButton" type="Button" parent="songLabel"]
margin_left = 405.0
margin_top = 240.0
margin_right = 805.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 20 )
custom_fonts/font = SubResource( 21 )
text = "Mario 64"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsMario" type="Label" parent="songLabel/marioButton"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nintendo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="menuButton" to="menuButton" method="_on_gotoMenu_pressed"]
[connection signal="value_changed" from="volumeBar" to="volumeBar" method="_on_volumeBar_value_changed"]
[connection signal="pressed" from="songLabel/racingButton" to="songLabel/racingButton" method="_on_playRacingMusic_pressed"]
[connection signal="pressed" from="songLabel/megalovaniaButton" to="songLabel/megalovaniaButton" method="_on_playMegalovania_pressed"]
[connection signal="pressed" from="songLabel/fanfareButton" to="songLabel/fanfareButton" method="_on_playFanfare_pressed"]
[connection signal="pressed" from="songLabel/fluffButton" to="songLabel/fluffButton" method="_on_playFluff_pressed"]
[connection signal="pressed" from="songLabel/seaShantyButton" to="songLabel/seaShantyButton" method="_on_playSeaShanty_pressed"]
[connection signal="pressed" from="songLabel/marioButton" to="songLabel/marioButton" method="_on_playMario_pressed"]
